<resources>
    <string name="app_name">SpoonLab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">Sign Out</string>

    <string name="menu_discover">Discover</string>
    <string name="menu_gallery">My recipes</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="login_header">Welcome to SpoonLab!</string>
    <string name="login_subheader">Sign in to discover a new delicious world</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="username_et">Username</string>
    <string name="email_et">Email</string>
    <string name="password_et">Password</string>
    <string name="confirm_password_et">Confirm password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register">Register</string>
    <string name="sign_up">SIGN UP</string>
    <string name="core_label">Core Course 2020/2021</string>
    <string name="credits_label">Álvaro Gallego, Sergio Gómez</string>
    <string name="title_activity_create_recipe">Create Recipe</string>
    <string name="creator">Made By: </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ingredients_and_quantities">Ingredients and quantities:</string>
    <string name="name_of_the_recipe">Name of the recipe:</string>
    <string name="steps">Steps:</string>
    <string name="ingredients">Ingredients:</string>
</resources>