<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/light_body">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/spoon_square"
            android:layout_width="match_parent"
            android:layout_height="184dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/register_square" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:fontFamily="@font/raizen_anthem"
            android:textSize="80sp"
            android:textColor="@color/black"
            android:layout_margin="35dp"/>

    </RelativeLayout>


    
    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp">


        <EditText
            android:id="@+id/email_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginTop="35dp"
            android:hint="@string/username_et" />

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_et"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:layout_below="@+id/email_et"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirm_password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password_et"
            android:layout_marginTop="16dp"
            android:textSize="20sp"
            android:layout_below="@+id/password_et"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password_et"
            android:layout_marginTop="35dp"
            android:text="@string/sign_up"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:padding="10dp"
            android:background="@drawable/button_rounded"/>

    </RelativeLayout>

</RelativeLayout>