<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/light_body">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/login_square" />

    <TextView
        android:id="@+id/login_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/login_header"
        android:textSize="40sp"
        android:fontFamily="@font/raizen_anthem"
        android:textColor="@color/black"/>

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:padding="16dp"
        android:layout_marginHorizontal="16dp"
        >

        <EditText
            android:id="@+id/username_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/username_et"/>

        <EditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_et"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_below="@+id/username_et"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_et"
            android:layout_marginTop="16dp"
            android:text="@string/sign_in"
            android:layout_centerHorizontal="true"
            android:textSize="20sp"
            android:padding="10dp"
            android:backgroundTint="@color/primary"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sign_in_btn"
            android:text="@string/no_account"
            android:textColor="@color/secondary_dark"
            android:fontFamily="@font/baby_blue"
            android:textSize="26sp"
            android:layout_marginTop="20dp"
            android:textAlignment="textEnd"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/spoon"
        android:layout_below="@+id/login_layout"
        android:padding="30dp"/>

</RelativeLayout>